--- a/tabelcia.css
+++ b/tabelcia.css
@@ -8,6 +8,14 @@ header,nav
  border-style:solid;
  
 }
+
+@media handheld, tv 
+{
+  header,nav {
+    background-color:red;
+  }
+}
+
 caption
 { 
   font-color: white;
